@@ -43,6 +43,7 @@ SVN trunk (1.1.1+svn):
    * really fix bug 3388, now really centering on image when clicking it
    * tab completion now completes to smallest substring, and show possoble
    completions
+   * added whisper support for lobby and observers in game
    
 Version 1.1.1:
  * campaigns
